--- a/backend/src/main/webapp/app/views/action_code/main.html
+++ b/backend/src/main/webapp/app/views/action_code/main.html
@@ -45,7 +45,7 @@
 								<td style="vertical-align: middle;"><span editable-text="item.actMeaning" e-name="meaning" e-form="rowform">{{ item.actMeaning }}</span></td>
 								<td style="vertical-align: middle;">
 									<span e-form="rowform" e-name="isPrintNotice" editable-checkbox="item.isPrintNotice" e-title="ปริ้น Notice">
-									    <!-- <i class="fa fa-print fa-lg user-status-enabled-icon" ng-show="item.isPrintNotice"></i> --> 
+									    <i class="fa fa-print fa-lg user-status-enabled-icon" ng-show="item.isPrintNotice"></i> 
 									</span>
 								</td>
 								<td style="vertical-align: middle;"><span editable-radiolist="item.enabled" e-name="enabled" e-form="rowform" e-ng-options="s.value as s.text for s in statuses"> 
