--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -1,3 +1,19 @@
+<style>
+	legend {
+	    border: 1px solid #BDC3C7;
+	    border-radius: 15px 15px 15px 15px;
+		text-align: center;
+		width: 200px;
+		font-weight: normal;
+		font-size: 18px;
+		margin-bottom: 0;
+	}
+	fieldset {
+		border: 1px solid #BDC3C7;
+		border-radius: 5px 5px 5px 5px;
+		padding-left: 30px;
+	}
+</style>
 
 <div class="row">
 	<div class="col-lg-12">
@@ -13,7 +29,7 @@
 					<span>{{ f.columnNameAlias || f.columnName }}: </span>
 				</div>
 				<div class="col-lg-7" style="padding: 0; background-color: #356190; border-top: 1px solid #234E7C;"
-					 ng-style="(f.isNotice && !isDisableNoticePrint) ? {'cursor': 'pointer'} : {}" ng-click="(f.isNotice && !isDisableNoticePrint) ? noticeMenu(detail[f.columnName+'_hide'] || detail[f.columnName]) : ''">
+					 ng-style="(f.isNotice && !isDisableNoticePrintBtn) ? {'cursor': 'pointer'} : {}" ng-click="(f.isNotice && !isDisableNoticePrintBtn) ? noticeMenu(detail[f.columnName+'_hide'] || detail[f.columnName]) : ''">
 					 
 					 <span ng-show="group1">
 					 	<span ng-show="f.dataType != 'sys_owner'">
@@ -144,9 +160,21 @@
 						  <div class="col-lg-12">
 						  	<div class="form-group">
 								<label class="control-label">Action Code</label>
-								<select name="actionCode" class="form-control" ng-change="askModalObj.actionCodeChanged()" ng-model="askModalObj.trace.actionCode" ng-options="option as option.actMeaning + ' [' + option.actCode + ']' for option in askModalObj.init.actionCodes">
+								<select name="actionCode" class="form-control" ng-change="askModalObj.actionCodeChanged()" ng-model="askModalObj.trace.actionCode" ng-options="option.id as option.actMeaning + ' [' + option.actCode + ']' for option in askModalObj.init.actionCodes">
 									<option value="">--เลือก Action Code--</option>
 						  		</select>
+						  		<div ng-show="isShowMoreNoticePrintData" style="margin-top: 3px;" ng-class="{'has-error':saveAskModalForm.optionsRadios.$invalid}">
+						  			<fieldset> <legend><small>แบบฟอร์ม Notice</small></legend>
+						  				<div class="radio" ng-repeat="nf in askModalObj.noticeFiles">
+											<label>
+										    	<input type="radio" name="optionsRadios" 
+										    		   ng-model="askModalObj.trace.templateId" ng-value="nf.id" 
+										    		   ng-required="isShowMoreNoticePrintData">
+										    	{{ nf.templateName }}
+										  	</label>
+										</div>
+						  			</fieldset>
+						  		</div>
 							</div>
 							
 							<div class="form-group">
