--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -1,13 +1,4 @@
 <style>
-	legend {
-	    border: 1px solid #BDC3C7;
-	    border-radius: 15px 15px 15px 15px;
-		text-align: center;
-		width: 200px;
-		font-weight: normal;
-		font-size: 18px;
-		margin-bottom: 0;
-	}
 	fieldset {
 		border: 1px solid #BDC3C7;
 		border-radius: 5px 5px 5px 5px;
@@ -164,8 +155,20 @@
 									<option value="">--เลือก Action Code--</option>
 						  		</select>
 						  		<div ng-show="isShowMoreNoticePrintData" style="margin-top: 3px;" ng-class="{'has-error':saveAskModalForm.optionsRadios.$invalid}">
-						  			<fieldset> <legend><small>แบบฟอร์ม Notice</small></legend>
+						  			<fieldset> 
+						  			
+						  				<em><u>แบบฟอร์ม Notice</u></em>
 						  				<div class="radio" ng-repeat="nf in askModalObj.noticeFiles">
+											<label>
+										    	<input type="radio" name="optionsRadios" 
+										    		   ng-model="askModalObj.trace.templateId" ng-value="nf.id" 
+										    		   ng-required="isShowMoreNoticePrintData">
+										    	{{ nf.templateName }}
+										  	</label>
+										</div>
+										
+										<em><u>ที่อยู่</u></em>
+										<div class="radio" ng-repeat="nf in askModalObj.noticeFiles">
 											<label>
 										    	<input type="radio" name="optionsRadios" 
 										    		   ng-model="askModalObj.trace.templateId" ng-value="nf.id" 
