--- a/backend/src/main/webapp/app/styles/sb-admin-2.css
+++ b/backend/src/main/webapp/app/styles/sb-admin-2.css
@@ -15,7 +15,7 @@ body {
 #page-wrapper {
     padding: 0 15px;
     min-height: 568px;
-    background-color: #fff;
+    background-color: #F2DBC1;
 }
 
 @media(min-width:768px) {
