--- a/backend/src/main/webapp/app/views/login.html
+++ b/backend/src/main/webapp/app/views/login.html
@@ -1,33 +1,8 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-            <div class="login-panel panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">{{ 'login.title' | translate }}</h3>
-                </div>
-                <div class="panel-body">
-                    <form role="form" ng-submit="login()" name="loginForm">
-                        <fieldset>
-							<div class="form-group input-group">
-							    <span class="input-group-addon"><i class="fa fa-user"></i></span>
-							    <input class="form-control" placeholder="Username" name="username" type="text" autofocus ng-model="credentials.username" required>
-							</div>
-							<div class="form-group input-group">
-							    <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-							    <input class="form-control" placeholder="Password" name="password" type="password" ng-model="credentials.password" required>
-							</div>	
-								
-                            <!-- <div class="checkbox">
-                                <label>
-                                    <input name="remember" type="checkbox" value="Remember Me">Remember Me
-                                </label>
-                            </div> -->
-                            <button class="btn btn-lg btn-success btn-block" ng-disabled="loginForm.$invalid">{{ 'login.login_btn' | translate }}</button>
-                        </fieldset>
-                    </form>
-                </div>
-                <div class="panel-footer"></div>
-            </div>
-        </div>
-    </div>
-</div>
+	
+	<form class="login" name="loginForm" ng-submit="login()">
+	    <h1>{{ 'login.title' | translate }}</h1>
+	    <input type="text" name="username" class="login-input" placeholder="Username" autofocus ng-model="credentials.username" required>
+	    <input type="password" name="password" class="login-input" placeholder="Password" ng-model="credentials.password" required>
+	    <input type="submit" value="{{ 'login.login_btn' | translate }}" class="login-submit">
+	</form>
+		
