--- a/backend/src/main/webapp/app/lib/css/login.css
+++ b/backend/src/main/webapp/app/lib/css/login.css
@@ -11,11 +11,7 @@ body {
   border: 1px solid #172b4e;
   border-bottom-color: #142647;
   border-radius: 5px;
-  background-image: -webkit-radial-gradient(cover, #437dd6, #3960a6);
-  background-image: -moz-radial-gradient(cover, #437dd6, #3960a6);
-  background-image: -o-radial-gradient(cover, #437dd6, #3960a6);
-  background-image: radial-gradient(cover, #437dd6, #3960a6);
-  -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), inset 0 0 1px 1px rgba(255, 255, 255, 0.1), 0 2px 10px rgba(0, 0, 0, 0.5);
+  background-image: -webkit-radial-gradient(cover, #66A1D4, #337AB7);
   box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), inset 0 0 1px 1px rgba(255, 255, 255, 0.1), 0 2px 10px rgba(0, 0, 0, 0.5);
   font: 12px/20px 'Lucida Grande', Verdana, sans-serif; 
 }
