--- a/backend/src/main/webapp/app/styles/common.css
+++ b/backend/src/main/webapp/app/styles/common.css
@@ -115,6 +115,7 @@
 
 .page-header {
 	color: #337AB7;
+	border-bottom-color: #EBC9A2 !important;
 }
 
 /* ----------: Override bootstrap css :---------- */
