--- a/backend/src/main/webapp/app/styles/sb-admin-2.css
+++ b/backend/src/main/webapp/app/styles/sb-admin-2.css
@@ -16,6 +16,9 @@ body {
     padding: 0 15px;
     min-height: 568px;
     background-color: #F2DBC1;
+    box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), inset 0 0 1px 1px rgba(255, 255, 255, 0.1), 0 1px 3px rgba(0, 0, 0, 0.5);
+    border-radius: 3px;
+    background-clip: padding-box;
 }
 
 @media(min-width:768px) {
