--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -95,7 +95,7 @@
 									   <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
 									   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>&emsp;&emsp;|&emsp;&emsp;
 									   <button type="button" class="btn btn-outline btn-primary" ng-click="exportResult()" ng-show="group1">Export</button>
-									   <button type="button" class="btn btn-outline btn-primary" ng-click="listPrinters()" ng-show="group1">Print Notice</button>
+									   <button type="button" class="btn btn-outline btn-primary" ng-click="exportNotices()" ng-show="group1">Print Notice</button>
 									  
 									</div>  
 								</div>
@@ -230,38 +230,3 @@
         </div>
     </div>
 </div>
-
-
-
-
-
-
-
-<!-- Modal -->
- <div class="modal fade" id="printerLstModal" tabindex="-1" role="dialog">
-     <div class="modal-dialog">
-         <div class="modal-content">
-         	<div class="modal-header">
-                <button type="button" class="close" ng-click="dismissModal()" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">Printers List</h4>
-            </div>
-            <div class="modal-body">            	    	
-            
-				<div class="panel panel-default" style="margin-bottom: 0; margin-top: 0;">
-				  <div class="panel-body">
-				  	<div class="row" ng-repeat="p in printers"> 
-				  		<div class="col-lg-12" style="text-align: center;">
-						  	<button class="btn btn-primary col-lg-12" type="button" style="margin-bottom: 3px;">{{ p }}</button>
-				  		</div>
-				  	</div>
-				  </div>
-				</div>
-				
-            </div>
-           	<div class="modal-footer">
-				<button type="button" class="btn btn-default" ng-click="dismissModal()">ปิด</button>
-			</div>
-         </div>
-     </div>
- </div>
-<!-- / Modal -->
