--- a/backend/src/main/webapp/app/views/product/search.html
+++ b/backend/src/main/webapp/app/views/product/search.html
@@ -57,12 +57,12 @@
 				</td>
 				<td>{{ u.createdDateTime | date : gb_dateTimeFormat }}</td>
 				<td>
-					<i class="fa fa-times fa-lg user-action-icon-danger" title="ลบข้อมูล" ng-click="deleteUser(u.id)" ng-show="group0"></i>&emsp;
-					<i class="fa fa-edit fa-lg user-action-icon-primary" title="แก้ใขข้อมูล" ng-click="editUser(u)" ng-hide="group5"></i>&emsp;
-					<i class="fa fa-clock-o fa-lg user-action-icon-primary" title="ตั้งค่าเวลาทำงาน" ng-click="workingTimeSetting(u.id)"></i>&emsp;
-					<i class="fa fa-desktop fa-lg user-action-icon-primary" title="ตั้งค่าการแสดงผลข้อมูล Account List" ng-show="group0" ng-click="importTaskSetting(u.id, u.productName)"></i>&emsp;
-					<i class="fa fa-desktop fa-lg user-action-icon-primary" title="ตั้งค่าการแสดงผลข้อมูล Payment" ng-show="group0" ng-click="importPaymentSetting(u.id, u.productName)"></i>&emsp;
-					<i class="fa fa-database fa-lg user-action-icon-primary" title="ตั้งค่าฐานข้อมูล" ng-click="databaseSetting(u)" ng-show="group0"></i>&emsp;
+					<i class="fa fa-times fa-lg user-action-icon-danger" title="ลบข้อมูล" ng-click="deleteUser(u.id)" ng-show="group0">&emsp;</i>
+					<i class="fa fa-edit fa-lg user-action-icon-primary" title="แก้ใขข้อมูล" ng-click="editUser(u)" ng-hide="group5">&emsp;</i>
+					<i class="fa fa-clock-o fa-lg user-action-icon-primary" title="ตั้งค่าเวลาทำงาน" ng-click="workingTimeSetting(u.id)">&emsp;</i>
+					<i class="fa fa-desktop fa-lg user-action-icon-primary" title="ตั้งค่าการแสดงผลข้อมูล Account List" ng-show="group0" ng-click="importTaskSetting(u.id, u.productName)">&emsp;</i>
+					<i class="fa fa-desktop fa-lg user-action-icon-primary" title="ตั้งค่าการแสดงผลข้อมูล Payment" ng-show="group0" ng-click="importPaymentSetting(u.id, u.productName)">&emsp;</i>
+					<i class="fa fa-database fa-lg user-action-icon-primary" title="ตั้งค่าฐานข้อมูล" ng-click="databaseSetting(u)" ng-show="group0">&emsp;</i>
 			        <input type="checkbox" title="ควบคุมการปริ้น Notice" ng-model="u.productSetting.isDisableNoticePrint" ng-change="noticePrintSetting(u)">
 				</td>
 			</tr>
