--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -12,9 +12,15 @@
 		  <button type="button" class="btn btn-primary btn-outline" ng-class="{'active': group.btnActive}" ng-repeat="group in groupDatas" ng-click="changeTab(group)">{{ group.name }}</button>
 		</div>
 		
-		<div class="checkbox" style="position: absolute; right: 20px;" ng-show="group1">
+		<div class="checkbox" style="position: absolute; right: 20px;">
 		    <label>
-		      <input type="checkbox" ng-model="isEditMode"> Edit mode
+		      <input type="checkbox" value="" data-toggle="collapse" data-target="#collapseAccList">ซ่อน Account-List
+		    </label>&nbsp;
+		    <label>
+		      <input type="checkbox" value="" data-toggle="collapse" data-target="#collapseActionPanel">ซ่อน Action-Panel
+		    </label>
+		    <label ng-show="group1">
+		      &nbsp;<input type="checkbox" ng-model="isEditMode">Edit mode
 		    </label>
 	  	</div>
 	</div>
@@ -62,11 +68,13 @@
 	</div>
 </div>
 
-<div class="row" style="margin-top: 3px; min-height: 325px;">
-	<div class="col-lg-12" ng-include="'./views/working/tab_tasklist.html'"></div>
+<div class="collapse in" id="collapseAccList">
+	<div class="row" style="margin-top: 3px; min-height: 325px;">
+		<div class="col-lg-12" ng-include="'./views/working/tab_tasklist.html'"></div>
+	</div>
 </div>
 
-<div class="row">
+<div class="row collapse in" id="collapseActionPanel">
 	<div class="col-lg-12">
 		<div class="btn-group" style="margin: 3px 0 3px 0;">
 		  <button type="button" class="btn btn-primary btn-outline" ng-class="{'active': menu.btnActive}" ng-repeat="menu in tabActionMenus" ng-click="changeTabAction(menu)" id="{{ menu.id }}">{{ menu.name }}</button>
