--- a/backend/src/main/webapp/app/views/setting/main.html
+++ b/backend/src/main/webapp/app/views/setting/main.html
@@ -83,7 +83,26 @@ fieldset {
 							</div>
 						</fieldset>
 						
-						
+						<fieldset style="margin-top: 15px;" ng-show="group0"> <legend style="color: #337AB7;">Phone configuration</legend>
+							<div class="form-group">
+								<label class="control-label col-lg-3" style="color: #337AB7;">WSServer: </label>
+								<div class="col-lg-6">
+									<a href="" e-class="form-control" e-style="width: 100%;" buttons="no" onaftersave="update()" editable-text="phoneWsServer">{{ phoneWsServer || 'edit' }}</a>
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="control-label col-lg-3" style="color: #337AB7;">Realm: </label>
+								<div class="col-lg-6">
+									<a href="" e-class="form-control" e-style="width: 100%;" buttons="no" onaftersave="update()" editable-text="phoneRealm">{{ phoneRealm || 'edit' }}</a>
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="control-label col-lg-3" style="color: #337AB7;">Default Password: </label>
+								<div class="col-lg-6">
+									<a href="" e-class="form-control" e-style="width: 100%;" buttons="no" onaftersave="update()" editable-text="phoneDefaultPass">{{ phoneDefaultPass || 'edit' }}</a>
+								</div>
+							</div>
+						</fieldset>
 						
                 	</div>
                 </div>
