--- a/backend/src/main/webapp/app/views/user/add.html
+++ b/backend/src/main/webapp/app/views/user/add.html
@@ -58,9 +58,12 @@
 					</div>
 					<div class="form-group">
 						<label class="control-label">เบอร์โทร</label>
-						<input name="phoneNumber" class="form-control" ng-model="user.phoneNumber">
+						<div class="input-group input-daterange">
+							<input name="phoneNumber" class="form-control" ng-model="user.phoneNumber" style="width: 220px;">
+						    <span class="input-group-addon">ext.</span>
+						    <input name="phoneExt" class="form-control" ng-model="user.phoneExt">
+						</div>
 					</div>
-					
 					<div class="form-group" ng-class="{'has-error': addUserForm.image.$invalid}">
 						<label class="control-label">ภาพถ่ายหน้าตรง</label>
 						<code style="position: absolute; right: 15px;"><em>*ไม่เกิน 1 MB</em></code>
