--- a/backend/src/main/webapp/app/views/profile/main.html
+++ b/backend/src/main/webapp/app/views/profile/main.html
@@ -67,10 +67,20 @@
 										<label class="control-label">สกุล</label>
 										<input name="lastName" class="form-control" ng-model="data.lastName" required>
 									</div>
-									<div class="form-group">
+									<!-- <div class="form-group">
 										<label class="control-label">เบอร์โทร</label>
 										<input name="phoneNumber" class="form-control" ng-model="data.phoneNumber">
+									</div> -->
+									<div class="form-group">
+										<label class="control-label">เบอร์โทร</label>
+										<div class="input-group input-daterange">
+											<input name="phoneNumber" class="form-control" ng-model="data.phoneNumber" style="text-align: left;">
+										    <span class="input-group-addon">ext.</span>
+										    <input name="phoneExt" class="form-control" ng-model="data.phoneExt">
+										</div>
 									</div>
+									
+									
 									
 									<div class="form-group" ng-class="{'has-error': profileForm.image.$invalid}">
 										<label class="control-label">ภาพถ่ายหน้าตรง</label>
