--- a/backend/src/main/webapp/app/views/user/add.html
+++ b/backend/src/main/webapp/app/views/user/add.html
@@ -59,7 +59,7 @@
 					<div class="form-group">
 						<label class="control-label">เบอร์โทร</label>
 						<div class="input-group input-daterange">
-							<input name="phoneNumber" class="form-control" ng-model="user.phoneNumber" style="width: 220px; text-align: left;">
+							<input name="phoneNumber" class="form-control" ng-model="user.phoneNumber" style="text-align: left;">
 						    <span class="input-group-addon">ext.</span>
 						    <input name="phoneExt" class="form-control" ng-model="user.phoneExt">
 						</div>
