--- a/backend/src/main/webapp/app/lib/css/ctxSip.css
+++ b/backend/src/main/webapp/app/lib/css/ctxSip.css
@@ -83,3 +83,8 @@
 #sipClient #numDisplay::-moz-placeholder {
   color: #bbb;
 }
+
+.disabledbutton {
+    pointer-events: none;
+    opacity: 0.4;
+}
