--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -59,10 +59,19 @@
 									    	   style="width: 120px;" ng-model="formData.dateTo">
 									  </div>
 									  
-									  <!-- <div class="form-group pull-right">
-										<label>ยอดนัดชำระรวม: {{ appointAmountTotal | number:2 }} บาท</label><br />
-									  </div> -->
-								   
+									  <span class="pull-right" ng-show="group1">
+				                           <button class="btn btn-outline btn-primary" title="Export on Excel Format" ng-click="exportResult(1)">
+				                               <i class="fa fa-file-excel-o"></i> Excel
+				                           </button>
+										   <button class="btn btn-outline btn-primary" title="Export on Text Format" ng-click="exportResult(3)">
+				                               <i class="fa fa-file-text-o"></i> Text
+				                           </button>
+				                           <span ng-show="isDisableNoticePrint">
+					                           	&nbsp;|&nbsp;
+											   <button type="button" class="btn btn-outline btn-primary" ng-click="exportNotices()">Print Notice</button>
+				                           </span>
+									   </span>
+									
 									</div>
 								</div>
 							
@@ -91,21 +100,10 @@
 										  		
 									  		</div>
 										</div>
-									  
+									  	
+									   &nbsp;&nbsp;
 									   <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
 									   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
-									   
-									   <span ng-show="group1">
-									   	   &emsp;&emsp;|&emsp;&emsp;
-				                           <button class="btn btn-outline btn-primary" title="Export on Excel Format" ng-click="exportResult(1)">
-				                               <i class="fa fa-file-excel-o"></i> Excel
-				                           </button>
-										   <button class="btn btn-outline btn-primary" title="Export on Text Format" ng-click="exportResult(3)">
-				                               <i class="fa fa-file-text-o"></i> Text
-				                           </button>
-				                           	&nbsp;|&nbsp;
-										   <button type="button" class="btn btn-outline btn-primary" ng-click="exportNotices()">Print Notice</button>
-									   </span>
 									   
 									</div>  
 								</div>
