--- a/backend/src/main/webapp/app/views/setting/main.html
+++ b/backend/src/main/webapp/app/views/setting/main.html
@@ -35,6 +35,13 @@ fieldset {
                 <div class="panel-body">
                 	<div class="form-horizontal">
                 	
+                		<div class="form-group" ng-show="group0">
+							<label class="control-label col-lg-3" style="color: #337AB7;">Product Key: </label>
+							<div class="col-lg-4">
+								<a href="" e-class="form-control" buttons="no" onaftersave="update()" editable-text="productKey" e-style="width: 350px;">{{ productKey || 'คลิกเพื่อแก้ใข' }}</a>
+							</div>
+						</div>
+						
 						<div class="form-group">
 							<label class="control-label col-lg-3" style="color: #337AB7;">ชื่อบริษัท: </label>
 							<div class="col-lg-4">
