--- a/backend/src/main/webapp/app/views/setting/main.html
+++ b/backend/src/main/webapp/app/views/setting/main.html
@@ -49,21 +49,19 @@ fieldset {
 							</div>
 						</div>
 						
-						<div class="form-group">
+						<div class="form-group" ng-show="group0">
 							<label class="control-label col-lg-3" style="color: #337AB7;">ฐานข้อมูลประเทศไทย: </label>
 							<div class="col-lg-4">
 								<input type="file" class="form-control" nv-file-select="" uploader="uploaderThailandDb" accept=".dat" />
 							</div>
 						</div>
 				
-						<fieldset style="margin-top: 15px;" ng-show="group1"> <legend style="color: #337AB7;">License Management</legend>
-							<div class="form-group">
-								<label class="control-label col-lg-3" style="color: #337AB7;">License: </label>
-								<div class="col-lg-6">
-									<a href="" e-class="form-control" e-style="width: 100%;" buttons="no" onaftersave="update()" editable-textarea="license" e-rows="15">{{ (license | limitTo: 100) || 'edit' }}</a>
-								</div>
+						<div class="form-group">
+							<label class="control-label col-lg-3" style="color: #337AB7;">License: </label>
+							<div class="col-lg-4">
+								<a href="" e-class="form-control" e-style="width: 100%;" buttons="no" onaftersave="update()" editable-textarea="license" e-rows="15">{{ (license | limitTo: 100) || 'edit' }}</a>
 							</div>
-						</fieldset>
+						</div>
 						
 						<fieldset style="margin-top: 15px;" ng-show="group0"> <legend style="color: #337AB7;">Database backup configuration</legend>
 							<div class="form-group">
