--- a/backend/src/main/webapp/app/views/setting/main.html
+++ b/backend/src/main/webapp/app/views/setting/main.html
@@ -38,7 +38,7 @@ fieldset {
                 		<div class="form-group" ng-show="group0">
 							<label class="control-label col-lg-3" style="color: #337AB7;">Product Key: </label>
 							<div class="col-lg-4">
-								<a href="" e-class="form-control" buttons="no" onaftersave="update()" editable-text="productKey" e-style="width: 350px;">{{ productKey || 'คลิกเพื่อแก้ใข' }}</a>
+								<a href="" e-class="form-control" buttons="no" onaftersave="update()" editable-text="productKey">{{ productKey || 'คลิกเพื่อแก้ใข' }}</a>
 							</div>
 						</div>
 						
@@ -59,7 +59,7 @@ fieldset {
 						<div class="form-group">
 							<label class="control-label col-lg-3" style="color: #337AB7;">License: </label>
 							<div class="col-lg-4">
-								<a href="" e-class="form-control" e-style="width: 100%;" buttons="no" onaftersave="update()" editable-textarea="license" e-rows="15">{{ (license | limitTo: 100) || 'edit' }}</a>
+								<a href="" e-class="form-control" e-style="width: 100%;" buttons="no" onaftersave="update()" editable-textarea="license" e-rows="15">{{ (license | limitTo: 55) || 'edit' }}</a>
 							</div>
 						</div>
 						
