--- a/backend/src/main/webapp/app/views/setting/main.html
+++ b/backend/src/main/webapp/app/views/setting/main.html
@@ -65,7 +65,7 @@ fieldset {
 								<a href="" class="form-control no-border" e-class="form-control" e-style="width: 100%; margin-left: 15px;" buttons="no" onaftersave="update()" editable-textarea="license" e-rows="15">{{ (license | limitTo: 55) || 'edit' }}</a>
 							</div>
 							<div class="col-lg-3">
-								<span class="form-control no-border"><code>License expires in {{ licenseDetail }}</code></span>
+								<span class="form-control no-border"><code>License expires on {{ licenseDetail }}</code></span>
 							</div>
 						</div>
 						
