--- a/backend/src/main/webapp/app/styles/common.css
+++ b/backend/src/main/webapp/app/styles/common.css
@@ -93,7 +93,23 @@
 	font-weight: 700;
 }
 
-
+.container-footer-common {
+    background-color: #B6D2E1;
+    vertical-align: middle;
+    z-index: 200;
+    bottom: 0;
+    height: 30px;
+    width: 100%;
+    position: fixed;
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-shadow: 0px 0px 7px 1px rgba(0,0,0,0.75);
+    padding-top: 5px;
+    vertical-align: middle;
+    color: #337AB7;
+}
 
 
 
