--- a/backend/src/main/webapp/app/views/product/search.html
+++ b/backend/src/main/webapp/app/views/product/search.html
@@ -59,11 +59,11 @@
 				<td>
 					<i class="fa fa-times fa-lg user-action-icon-danger" title="ลบข้อมูล" ng-click="deleteUser(u.id)" ng-show="group0">&emsp;</i>
 					<i class="fa fa-edit fa-lg user-action-icon-primary" title="แก้ใขข้อมูล" ng-click="editUser(u)" ng-hide="group5">&emsp;</i>
-					<i class="fa fa-clock-o fa-lg user-action-icon-primary" title="ตั้งค่าเวลาทำงาน" ng-click="workingTimeSetting(u.id)">&emsp;</i>
+					<i class="fa fa-clock-o fa-lg user-action-icon-primary" title="ตั้งค่าเวลาทำงาน" ng-click="workingTimeSetting(u.id)" ng-hide="group5">&emsp;</i>
 					<i class="fa fa-desktop fa-lg user-action-icon-primary" title="ตั้งค่าการแสดงผลข้อมูล Account List" ng-show="group0" ng-click="importTaskSetting(u.id, u.productName)">&emsp;</i>
 					<i class="fa fa-desktop fa-lg user-action-icon-primary" title="ตั้งค่าการแสดงผลข้อมูล Payment" ng-show="group0" ng-click="importPaymentSetting(u.id, u.productName)">&emsp;</i>
 					<i class="fa fa-database fa-lg user-action-icon-primary" title="ตั้งค่าฐานข้อมูล" ng-click="databaseSetting(u)" ng-show="group0">&emsp;</i>
-			        <input type="checkbox" title="ควบคุมการปริ้น Notice" ng-model="u.productSetting.isDisableNoticePrint" ng-change="noticePrintSetting(u)">
+			        <input type="checkbox" title="ควบคุมการปริ้น Notice" ng-model="u.productSetting.isDisableNoticePrint" ng-change="noticePrintSetting(u)" ng-hide="group5">
 				</td>
 			</tr>
 		</tbody>
