--- a/backend/src/main/webapp/app/views/product/add.html
+++ b/backend/src/main/webapp/app/views/product/add.html
@@ -5,14 +5,26 @@
 			<input name="productName" class="form-control" ng-model="data.productName" required>
 		</div>
 		<div class="form-group">
-                <label>{{'user.addpage.status' | translate}} &nbsp;&nbsp;</label>
-                <label class="radio-inline">
-                    <input type="radio" name="enabled" value="1" ng-checked="data.enabled == 1" ng-model="data.enabled">{{'user.addpage.status.enable' | translate}}
-                </label>
-                <label class="radio-inline">
-                    <input type="radio" name="enabled" value="0" ng-checked="data.enabled == 0" ng-model="data.enabled">{{'user.addpage.status.disable' | translate}}
-                </label>
-            </div>
+	        <label>ผลการติดตาม export-file</label>
+			<div class="checkbox">
+			    <label>
+			      <input type="checkbox" name="excelFormat" ng-model="data.isTraceExportExcel"> Excel file
+			    </label>
+			    &nbsp;&nbsp;&nbsp;
+			    <label>
+			      <input type="checkbox" name="textFormat" ng-model="data.isTraceExportTxt"> Text file
+			    </label>
+		  	</div>	        
+        </div>
+		<div class="form-group">
+	        <label>{{'user.addpage.status' | translate}} &nbsp;&nbsp;</label>
+	        <label class="radio-inline">
+	            <input type="radio" name="enabled" value="1" ng-checked="data.enabled == 1" ng-model="data.enabled">{{'user.addpage.status.enable' | translate}}
+	        </label>
+	        <label class="radio-inline">
+	            <input type="radio" name="enabled" value="0" ng-checked="data.enabled == 0" ng-model="data.enabled">{{'user.addpage.status.disable' | translate}}
+	        </label>
+        </div>
 		<div style="text-align: center;">
 			<button type="button" class="btn btn-outline btn-primary btn-lg" ng-click="clear()">{{'user.addpage.celar_btn' | translate}}</button>
 			<button type="submit" class="btn btn-outline btn-primary btn-lg" ng-disabled="addUserForm.$invalid">{{ persisBtn }}</button>
