--- a/backend/src/main/webapp/app/views/setting/main.html
+++ b/backend/src/main/webapp/app/views/setting/main.html
@@ -59,13 +59,10 @@ fieldset {
 							</div>
 						</div>
 				
-						<div class="form-group">
+						<div class="form-group" ng-show="group0">
 							<label class="control-label col-lg-3" style="color: #337AB7;">License: </label>
 							<div class="col-lg-6">
-								<a href="" class="form-control no-border" e-class="form-control" e-style="width: 100%; margin-left: 15px;" buttons="no" onaftersave="update()" editable-textarea="license_dummy" e-rows="15"></a>
-							</div>
-							<div class="col-lg-3">
-								<span class="form-control no-border"><code>License expires on {{ licenseDetail }}</code></span>
+								<a href="" class="form-control no-border" e-class="form-control" e-style="width: 100%; margin-left: 15px;" buttons="no" onaftersave="update()" editable-textarea="license" e-rows="15"></a>
 							</div>
 						</div>
 						
