--- a/backend/src/main/webapp/app/views/setting/main.html
+++ b/backend/src/main/webapp/app/views/setting/main.html
@@ -41,7 +41,7 @@ fieldset {
                 	<div class="form-horizontal">
                 	
                 		<div class="form-group">
-							<label class="control-label col-lg-3" style="color: #337AB7;">Product Key: </label>
+							<label class="control-label col-lg-3" style="color: #337AB7;">Comp Code: </label>
 							<div class="col-lg-4"><span class="form-control">{{ productKey }}</span></div>
 						</div>
 						
