--- a/backend/src/main/webapp/app/views/assigntask/main.html
+++ b/backend/src/main/webapp/app/views/assigntask/main.html
@@ -43,10 +43,15 @@
 						<table class="table table-striped table-hover" style="margin: 0;">
 							<thead>
 								<tr style="color: #337AB7;">
-									<th width="10%">ลำดับที่</th>
-									<th width="45%">ชื่อไฟล์</th>
-									<th width="10%">จำนวนเคส</th>
-									<th width="20%">วันที่นำเข้า</th>
+									<th width="5%">ลำดับที่</th>
+									<th width="50%">ชื่อไฟล์</th>
+									
+									<th width="6%">Insert</th>
+									<th width="6%">Update</th>				
+									<th width="6%">Total</th>
+									<!-- <th width="10%">จำนวนเคส</th> -->
+									
+									<th width="12%">วันที่นำเข้า</th>
 									<th width="15%">
 										<i class="fa fa-tasks fa-lg user-action-icon-primary" ng-click="viewDetail()" title="แสดงข้อมูลทั้งหมด"></i>
 									</th>									
@@ -56,6 +61,8 @@
 								<tr ng-repeat="data in datas track by $index" style="color: #337AB7;">
 									<td>{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 									<td>{{ data.fileName }}</td>
+									<td>{{ data.insertRowNum | number:0 }}</td>
+									<td>{{ data.updateRowNum | number:0 }}</td>
 									<td>{{ data.rowNum | number:0 }}</td>
 									<td>{{ data.createdDateTime | date:gb_dateTimeFormat }}</td>
 									<td>
